--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ h1{
     background-position: center;
     display: flex;
     align-items: center;
-    padding:  0 16%;
+    padding: 57px;
     background-size: auto;
     height: 70vh;
     margin-left: 84px;
@@ -204,7 +204,8 @@ h1{
 
 .main{
     box-shadow: 0px 6px 6px 0px #0000000D;
-    background-color: #0000000D;
+    background-color: #FFFFFF;
+;
     width: 1204px;
     height: 698px;
     margin-top: 52.5px;
@@ -357,7 +358,7 @@ h6{
 }
 
 .lifestyle{
-    background-color: #0000000D;
+    background-color: #FFFFF;
     width: 579px;
     height: 670px;
     box-shadow: 0px 6px 6px 0px #0000000D;
@@ -455,7 +456,7 @@ h6{
 }
 
 .summer{
-    background-color: #0000000D;
+    background-color: #FFFFF;
     width: 565px;
     height: 670px;
     box-shadow: 0px 6px 6px 0px #0000000D;
@@ -561,21 +562,24 @@ h6{
     margin-bottom: 48.72px;
     width: 1204px;
     border-radius: 20px;
-    background-color: #0000000D;
+    background-color: #FFFFF
+    box-shadow: 0px 6px 6px 0px #0000000D;
 }
 
 .card2 {
     margin-bottom: 48.72px;
     width: 1204px;
     border-radius: 20px;
-    background-color: #0000000D;
+    background-color: #FFFFF;
+    box-shadow: 0px 6px 6px 0px #0000000D;
 }
 
 .card3 {
     margin-bottom: 48.72px;
     width: 1204px;
     border-radius: 20px;
-    background-color: #0000000D;
+    background-color: #FFFFF;
+    box-shadow: 0px 6px 6px 0px #0000000D;
 }
 
 .background-pic1 {
@@ -674,6 +678,7 @@ h6{
     width: 52px;
     height: 39px;
     margin-left: 36.49px;
+    margin-right: 0;
 }
 
 .read-more p {
@@ -684,6 +689,7 @@ h6{
     letter-spacing: 0.24em;
     text-align: left;
     color: #4CE0D7;
+    margin-left: 0;
 }
 
 .buttonR {
@@ -779,5 +785,6 @@ hr {
 
 footer {
     border-radius: 40px 40px 0 0;
-    background-color: #0000000D;
+    background-color: #FFFFF;
+    box-shadow: 0px 6px 6px 0px #0000000D;
 }
